Fixed names overflow for categories

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -128,6 +128,7 @@ a {
     margin: auto;
     width: 100%;
     margin-bottom: 10px;
+    text-overflow: ellipsis;
 }
 
 .category-controls{
